# Quip

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
.workspace/: eng-spec-demo-gaps-nuclear-fallback.md
crates/quip-contracts/: Cargo.toml
docs/: OPEN_QUESTIONS.md  SPEC.md  benchmarking.md  freesolo-post-training-slides.md  grpo-checkpoint-trials-20260719.md  hackathon-demo-scope-quip.md  hybrid-lexical-experiment.md  ime-model.md  input-method.md  model-size-scaling-results.md  person-2-plan.md  phase-0-contracts.md  phase-0.schema.json  quip-v2-base-frontier-benchmark.md  rolling-correction-full.md  rolling-correction-now.md  synthetic-context-data.md  technical-plan.md  training-data-contract.md  training-data-roadmap.md  training-data-v2-draft.md
docs/fixtures/: phase-0-examples.json
native/quip-ime/: Info.plist  client_shim.h  client_shim.m  controller.swift  engine_bridge.swift  server.swift
scripts/: build-native-input-method.sh  clean-stale-input-methods.sh  install-input-method.sh  select-native-input-method.swift
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/fixtures/: demo_corpus.json
src-tauri/sidecars/inference/: Cargo.toml  README.md
src-tauri/sidecars/inference/scripts/: compare-global-models.sh  convert-peft-adapter-to-mlx.py  fake-model-sidecar.py  live-model-runtime.sh  run-fake-app.sh  run-latency-benchmark.sh  run-live-app.sh  run-live-phrase-tester.sh  run-mlx-server.py  setup-global-adapter.sh
src-tauri/sidecars/inference/src/: fixture.rs  lib.rs  live.rs  main.rs  protocol.rs
src-tauri/sidecars/inference/tests/: fixture_contract.rs  process_protocol.rs
src-tauri/src/: debug_events.rs  ime_bridge.rs  input_method.rs  input_method_shim.m  main.rs
src-tauri/src/accessibility/: mod.rs
src-tauri/src/commit/: mod.rs
src-tauri/src/composition/: edits.rs  mod.rs
src-tauri/src/inference/: mod.rs  sidecar_client.rs
src-tauri/src/learning/: mod.rs
src-tauri/src/settings/: mod.rs
src/ui/: burst-window.test.mjs  burst-window.ts  composition.html  composition.ts  contracts.fixture.ts  contracts.ts  demo.html  demo.ts  ipc.ts  replacement.ts  (+6 more)
(+133 files in other folders)
