[package]
name = "quip"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { workspace = true }
serde_json = { workspace = true }
quip-contracts = { path = "../crates/quip-contracts" }
axuielement = "0.9.1"
arboard = "3.6.1"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSRunningApplication", "libc"] }
